@@ -62,6 +62,7 @@ Changes since Asterisk 1.4-beta was branched:
   * Added the URI redirect option for the built-in HTTP server
   * Added the trunkmaxsize configuration option to chan_iax2.
   * Added G729 passthrough support to chan_phone for Sigma Designs boards.
+  * Added the parkedcalltransfers option to features.conf
 
 SIP changes
 -----------
